refactor(thread): migrate string literals in thread/process/telemetry to StringLookup